# rust-pswd-manager

./: .gitignore  Cargo.toml  README.md  collections.json
src/: accounts.rs  collections.rs  cryptography.rs  main.rs  manager.rs  utils.rs
