[package]
name = "rust-pswd-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
rand = "0.8.5"
savefile = "0.16.2"
uuid = {version = "1.6.1", features = ["v4"]}
inquire = "0.6.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.79"
zeroize = {version = "1.7.0", features = ["derive"]}
rust-crypto = "0.2.36"
hex = "0.4.3"
cli-clipboard = "0.4.0"
